Add TailwindCSS and DasiyUI dependencies

--- a/clubswimcomp-ui/index.html
+++ b/clubswimcomp-ui/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <link data-trunk rel="tailwind-css" href="./style/style.css" />
+</head>
 
 <body></body>
 
