--- a/clubswimcomp-ui/index.html
+++ b/clubswimcomp-ui/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="corporate">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link data-trunk rel="tailwind-css" href="./style/style.css" />
 </head>
 
 <body></body>
 
 </html>
+
+<!doctype html>
+<html>
