--- a/clubswimcomp-ui/index.html
+++ b/clubswimcomp-ui/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link data-trunk rel="tailwind-css" href="./style/style.css" />
+    <link data-trunk rel="tailwind-css" href="./style/style.scss" />
 </head>
 
 <body></body>
